[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/Apple/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Node2D"]
position = Vector2( 291, 308 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
spawn_limit = 50

[node name="Sprite" type="Sprite" parent="."]

[node name="Node2D" type="Node2D" parent="."]

[node name="spawn_apple" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="spawn_apple" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
